--- a/find-ngo.html
+++ b/find-ngo.html
@@ -13,9 +13,10 @@
   <nav class="links">
     <a href="index.html">Home</a>
     <a href="find-ngo.html">Find NGO</a>
-    <a href="#">Emergency Alerts</a>
-    <a href="#" class="login-btn">Login</a>
-    <a href="#" class="reg-btn">Register</a>
+    <a href="emergency.html">Emergency Alerts</a>
+    <a href="login.html"  class="login-btn">Login</a>
+    
+     <a href="register.html" class="reg-btn">Register</a>
   </nav>
 </header>
 
@@ -40,21 +41,27 @@
 
   <div class="card-category">
     <div class="card">
-      <h3>Hope Foundation</h3>
-      <p>📍 Chennai</p>
-      <p>🩸 Blood Donation</p>
+      <img src="image/dog-kitten.jpg" />
+      <h3>Pet Adoption</h3>
+      <p>Find animals looking for a home</p>
     </div>
 
     <div class="card">
-      <h3>Paws Shelter</h3>
-      <p>📍 Bangalore</p>
-      <p>🐶 Pet Adoption</p>
+      <img src="image/human-blood-donate-on-white-background-free-vector.jpg" />
+      <h3>Blood Donation</h3>
+      <p>Donate for urgent blood needs</p>
     </div>
 
     <div class="card">
-      <h3>EduCare NGO</h3>
-      <p>📍 Hyderabad</p>
-      <p>📚 Education Support</p>
+      <img src="image/volunteer.jpg" />
+      <h3>Volunteer & Support</h3>
+      <p>Help NGOs with social initiatives</p>
+    </div>
+
+    <div class="card">
+      <img src="image/images.png" />
+      <h3>Education Support</h3>
+      <p>Education for every child, everywhere.</p>
     </div>
   </div>
 </section>
