--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <nav class="links">
     <a href="index.html">Home</a>
     <a href="find-ngo.html">Find NGO</a>
-    <a href="#">Emergency Alerts</a>
-    <a href="#" class="login-btn">Login</a>
-    <a href="#" class="reg-btn">Register</a>
+    <a href="emergency.html">Emergency Alerts</a>
+    <a href="login.html" class="login-btn">Login</a>
+     <a href="register.html" class="reg-btn">Register</a>
   </nav>
 </header>
 
@@ -66,6 +66,12 @@
       <div class="alert">
         <strong class="op">🍽️ Food Drive:</strong> Supplies required for 100+ people
       </div>
+
+       <div class="alert">
+                    <strong class="op">🧒 Child Education Rescue:</strong>
+                    Urgent intervention to prevent child labor and dropout
+                </div>
+                
     </div>
   </div>
 </section>
