--- a/register.html
+++ b/register.html
@@ -11,14 +11,13 @@
 <header class="nav">
   <div class="logo">❤️ HelpNear</div>
   <nav class="links">
-    <a href="index.html">Home</a>
-    <a href="find-ngo.html">Find NGO</a>
-    <a href="emergency.html">Emergency Alerts</a>
-    <a href="login.html" class="regsiter-btn">Login</a>
-    <a href="register.html" class="reg-btn">Register</a>
+    <a class="nav-text" href="index.html">Home</a>
+    <a class="nav-text" href="find-ngo.html">Find NGO</a>
+    <a class="nav-text" href="emergency.html">Emergency Alerts</a>
+    <a href="login.html" class="login-btn">Login</a>
+     <a href="register.html" class="reg-btn">Register</a>
   </nav>
 </header>
-
 <section class="main">
   <img src="image/new_bg.jpg" class="sri" />
 
