--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header class="nav">
   <div class="logo">❤️ HelpNear</div>
   <nav class="links">
-    <a href="index.html">Home</a>
-    <a href="find-ngo.html">Find NGO</a>
-    <a href="emergency.html">Emergency Alerts</a>
+    <a class="nav-text" href="index.html">Home</a>
+    <a class="nav-text" href="find-ngo.html">Find NGO</a>
+    <a class="nav-text" href="emergency.html">Emergency Alerts</a>
     <a href="login.html" class="login-btn">Login</a>
      <a href="register.html" class="reg-btn">Register</a>
   </nav>
