--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HelpNear | Home</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="./icons/favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=add_alert" />
+  
 </head>
 <body>
 
 <header class="nav">
-  <div class="logo">❤️ HelpNear</div>
+  <div class="logo">
+  <img src="./icons/android-chrome-512x512.png" alt="HelpNear Logo">
+  <span>HelpNear</span>
+</div>
   <nav class="links">
     <a class="nav-text" href="index.html">Home</a>
     <a class="nav-text" href="find-ngo.html">Find NGO</a>
@@ -52,15 +58,15 @@
   </div>
 
   <div class="emergency">
-    <h2>🚨 Emergency Alerts</h2>
+    <h2><img src="icons/alert_icon.png"> Emergency Alerts</h2>
 
     <div class="alert-row">
       <div class="alert">
-        <strong class="op">🏥 Urgent Supplies:</strong> O+ blood needed at City Hospital
+        <strong class="op">🏥 Urgent Supplies:</strong> O+ blood needed at VIT Health Centre.
       </div>
 
       <div class="alert">
-        <strong class="op">⛑️ Rescue Needed:</strong> Injured dog near Central Park
+        <strong class="op">⛑️ Rescue Needed:</strong> Injured dog near VIT Main Gate
       </div>
 
       <div class="alert">
