--- a/login.html
+++ b/login.html
@@ -5,11 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HelpNear | Login</title>
   <link rel="stylesheet" href="styles.css" />
+   <link rel="icon" href="./icons/favicon.ico">
 </head>
 <body>
 
 <header class="nav">
-  <div class="logo">❤️ HelpNear</div>
+  <div class="logo">
+  <img src="./icons/android-chrome-512x512.png" alt="HelpNear Logo">
+  <span>HelpNear</span>
+</div>
   <nav class="links">
     <a class="nav-text" href="index.html">Home</a>
     <a class="nav-text" href="find-ngo.html">Find NGO</a>
