--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
     <div class="card">
       <img src="image/dog-kitten.jpg" />
       <h3>Pet Adoption</h3>
-      <p>Find animals looking for a home</p>
+      <p>Find animals looking for a home and give them a new Life</p>
     </div>
 
     <div class="card">
       <img src="image/human-blood-donate-on-white-background-free-vector.jpg" />
       <h3>Blood Donation</h3>
-      <p>Donate for urgent blood needs</p>
+      <p>Donate for Blood And Save Lives.</p>
     </div>
 
     <div class="card">
       <img src="image/volunteer.jpg" />
       <h3>Volunteer & Support</h3>
-      <p>Help NGOs with social initiatives</p>
+      <p>Help NGOs with social initiatives For Better </p>
     </div>
 
     <div class="card">
