--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
   <div class="emergency">
     <h2><img src="icons/alert_icon.png"> Emergency Alerts</h2>
+    <p class="emer" style="color: rgb(246, 240, 240);">Near To You</p>
 
     <div class="alert-row">
       <div class="alert">
