--- a/find-ngo.html
+++ b/find-ngo.html
@@ -80,8 +80,8 @@
 const ngos = [
   {
     name: "Blue Cross of India",
-    link: "https://www.bluecrossofindia.org/",
-    img: "image/ngo1.jpg"
+    link: "https://bluecrossofindia.org/",
+    img: "https://bluecrossofindia.org/images/BCILogoWithWhiteR.png"
   },
   {
     name: "PETA India",
