--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
   <title>HelpNear | Home</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="./icons/favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0&icon_names=add_alert" />
-  
 </head>
 <body>
 
 <header class="nav">
   <div class="logo">
-  <img src="./icons/android-chrome-512x512.png" alt="HelpNear Logo">
-  <span>HelpNear</span>
-</div>
+    <img src="./icons/android-chrome-512x512.png" alt="HelpNear Logo">
+    <span>HelpNear</span>
+  </div>
   <nav class="links">
     <a class="nav-text" href="index.html">Home</a>
     <a class="nav-text" href="find-ngo.html">Find NGO</a>
     <a class="nav-text" href="emergency.html">Emergency Alerts</a>
-   <a href="login.html" class="login-btn" id="loginBtn">Login</a>
-<a href="register.html" class="reg-btn" id="registerBtn">Register</a>
-<a href="#" class="login-btn" id="logoutBtn" style="display:none;">Logout</a>
+    <a href="login.html" class="login-btn" id="loginBtn">Login</a>
+    <a href="register.html" class="reg-btn" id="registerBtn">Register</a>
+    <a href="#" class="login-btn" id="logoutBtn" style="display:none;">Logout</a>
   </nav>
 </header>
 
@@ -33,29 +31,43 @@
   <p>Connecting people with NGOs for adoption, blood donation and emergencies</p>
 
   <div class="card-category">
-    <div class="card">
-      <img src="image/dog-kitten.jpg" />
-      <h3>Pet Adoption</h3>
-      <p>Find animals looking for a home and give them a new Life</p>
-    </div>
 
-    <div class="card">
-      <img src="image/human-blood-donate-on-white-background-free-vector.jpg" />
-      <h3>Blood Donation</h3>
-      <p>Donate for Blood And Save Lives.</p>
-    </div>
+    <!-- Pet Adoption -->
+    <a href="category.html?type=pet" class="card-link">
+      <div class="card">
+        <img src="image/dog-kitten.jpg" />
+        <h3>Pet Adoption</h3>
+        <p>Find animals looking for a home and give them a new Life</p>
+      </div>
+    </a>
 
-    <div class="card">
-      <img src="image/volunteer.jpg" />
-      <h3>Volunteer & Support</h3>
-      <p>Help NGOs with social initiatives For Better </p>
-    </div>
+    <!-- Blood Donation -->
+    <a href="category.html?type=blood" class="card-link">
+      <div class="card">
+        <img src="image/human-blood-donate-on-white-background-free-vector.jpg" />
+        <h3>Blood Donation</h3>
+        <p>Donate for Blood And Save Lives.</p>
+      </div>
+    </a>
 
-    <div class="card">
-      <img src="image/images.png" />
-      <h3>Education Support</h3>
-      <p>Education for every child, everywhere.</p>
-    </div>
+    <!-- Volunteer -->
+    <a href="category.html?type=volunteer" class="card-link">
+      <div class="card">
+        <img src="image/volunteer.jpg" />
+        <h3>Volunteer & Support</h3>
+        <p>Help NGOs with social initiatives For Better</p>
+      </div>
+    </a>
+
+    <!-- Education -->
+    <a href="category.html?type=education" class="card-link">
+      <div class="card">
+        <img src="image/images.png" />
+        <h3>Education Support</h3>
+        <p>Education for every child, everywhere.</p>
+      </div>
+    </a>
+
   </div>
 
   <div class="emergency">
@@ -75,14 +87,16 @@
         <strong class="op">🍽️ Food Drive:</strong> Supplies required for 100+ people
       </div>
 
-       <div class="alert">
-                    <strong class="op">🧒 Child Education Rescue:</strong>
-                    Urgent intervention to prevent child labor and dropout
-                </div>
-                
+      <div class="alert">
+        <strong class="op">🧒 Child Education Rescue:</strong>
+        Urgent intervention to prevent child labor and dropout
+      </div>
     </div>
   </div>
+
 </section>
+
+<!-- Login / Logout Toggle Script -->
 <script>
   const loginBtn = document.getElementById("loginBtn");
   const registerBtn = document.getElementById("registerBtn");
