--- a/index.html
+++ b/index.html
@@ -76,27 +76,44 @@
       <h2><img src="icons/alert_icon.png"> Emergency Alerts</h2>
       <p class="emer" style="color: rgb(246, 240, 240);">Nearest To You</p>
 
-      <div class="alert-row">
-        <div class="alert">
-          <strong class="op">🏥 Urgent Supplies:</strong> O+ blood needed at VIT Health Centre.
-        </div>
+    <div class="alert-row">
 
-        <div class="alert">
-          <strong class="op">⛑️ Rescue Needed:</strong> Injured dog near VIT Main Gate
-        </div>
+  <a href="https://share.google/HaraH4vbI43eoZuVF" target="_blank" class="alert-link">
+    <div class="alert">
+      <strong class="op">🏥 Urgent Supplies:</strong>
+      O+ blood needed at VIT Health Centre.
+    </div>
+  </a>
 
-        <div class="alert">
-          <strong class="op">🍽️ Food Drive:</strong> Supplies required for 100+ people
-        </div>
+  <a href="https://www.google.com/maps/search/?api=1&query=VIT+Main+Gate" target="_blank" class="alert-link">
+    <div class="alert">
+      <strong class="op">⛑️ Rescue Needed:</strong>
+      Injured dog near VIT Main Gate
+    </div>
+  </a>
 
-        <div class="alert">
-          <strong class="op">🧒 Child Education Rescue:</strong>
-          Urgent intervention to prevent child labor and dropout
-        </div>
-        <div class="alert">
-          <strong class="op">🏥 Medical Assistance:</strong> Emergency funds needed for child heart surgery in Global Hospital.
-        </div>
-      </div>
+  <a href="https://maps.app.goo.gl/Dk3aGjPLNecv65LU9" target="_blank" class="alert-link">
+    <div class="alert">
+      <strong class="op">🍽️ Food Drive:</strong>
+      Supplies required for 100+ people
+    </div>
+  </a>
+
+  <a href="https://www.google.com/maps/search/?api=1&query=Child+Education+NGO+Chennai" target="_blank" class="alert-link">
+    <div class="alert">
+      <strong class="op">🧒 Child Education Rescue:</strong>
+      Urgent intervention to prevent child labor and dropout
+    </div>
+  </a>
+
+  <a href="https://www.google.com/maps/search/?api=1&query=Global+Hospital+Chennai" target="_blank" class="alert-link">
+    <div class="alert">
+      <strong class="op">🏥 Medical Assistance:</strong>
+      Emergency funds needed for child heart surgery in Global Hospital.
+    </div>
+  </a>
+
+</div>
     </div>
 
   </section>
